JOTM-27/12/2018-Especifica campos requeridos labels
* Agrega campos requeridos label

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -200,15 +200,15 @@
     <string name="pipa">Pipa</string>
     <string name="tipo_de_persona_fiscal">Tipo de persona fiscal</string>
     <string name="regimen_fiscal">Régimen fiscal</string>
-    <string name="nombre">Nombre</string>
+    <string name="nombre">Nombre *</string>
     <string name="apellido_1">Apellido 1 *</string>
     <string name="apellido_2">Apellido 2</string>
-    <string name="celular">Celular</string>
-    <string name="telef_no_fijo">Teléfono fijo</string>
-    <string name="razon_social">Razón Social</string>
+    <string name="celular">Celular *</string>
+    <string name="telef_no_fijo">Teléfono fijo *</string>
+    <string name="razon_social">Razón Social *</string>
     <string name="cel">CEL</string>
     <string name="nom">NOM</string>
-    <string name="rfc">RFC</string>
+    <string name="rfc">RFC *</string>
     <string name="factura">FACTURA</string>
     <string name="gas_lp">GAS LP</string>
     <string name="cilindro_con_gas_btn">CILINDRO CON GAS</string>
