jotm-31/12/2018-Cambios app

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -262,4 +262,6 @@
         <item>Desc</item>
         <item>Subt.</item>
     </string-array>
+    <string name="info">Información</string>
+    <string name="Registra_configuracion_final">Registra la configuración de entrada de la camioneta</string>
 </resources>
