Recargapipa was added into Lecutrap5000activity and cameralecturaactivity

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -119,6 +119,7 @@
     <string name="mensjae_error_campos">Existen errores en algunos campos:</string>
     <string name="tomar_foto">Tomar foto</string>
     <string name="tomar_foto_estacion">Tomar foto de P5000 </string>
+    <string name="tomar_foto_pipa">Tomar foto de P5000 </string>
     <string name="registra_porcentaje_estacion">Registra el porcentaje del </string>
     <string name="selecciona_la_pipa">Selecciona la pipa</string>
     <string name="Pipa">Pipa</string>
