--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -264,5 +264,6 @@
         <item>Subt.</item>
     </string-array>
     <string name="info">Información</string>
+    <string name="LigaActualizacion">Actualice en la siguiente liga:</string>
     <string name="Registra_configuracion_final">Registra la configuración de entrada de la camioneta</string>
 </resources>
