--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values/strings.xml
@@ -106,7 +106,7 @@
     <string name="mensaje_exito_papeleta_registro_en_servicio">Los datos se han guardado exitosamente</string>
     <string name="titulo_exito_registro_papeleta_android">Datos guardados en Android</string>
     <string name="mensaje_exito_papeleta_android">No he logrado conectar con el servidor por falta de conexión a internet. Los datos se enviarán al detectar una conexión de internet.</string>
-    <string name="titulo_error_papeleta">Se ha generado un error, intente nuevamente</string>
+    <string name="titulo_error_papeleta">Mensaje del sistema</string>
     <string name="toma_de_lectura_inicial">Toma de lectura inicial</string>
     <string name="seleciona_la_estaci_n_de_carburaci_n">Selecciona la Estación de Carburación:</string>
     <string name="selecciona_el_tipo_de_medidor_porcentual">Selecciona el tipo de medidor porcentual:</string>
